# health-service-idp

./: .env.example  .gitignore  .mcp.json  ARCHITECTURAL_DECISIONS.md  ARGOCD_GITHUB_SETUP.md  AWS_AUTH_TROUBLESHOOTING.md  CLAUDE.md  DEBUG_LOG_CUE_TEMPLATE_ISSUES.md  E2E_TESTING_STRATEGY.md  MANUAL_SETUP_REQUIRED.md  MINIMAL-REALTIME-OAM.yaml  Makefile  OAM-VCLUSTER-IMPLEMENTATION-SUMMARY.md  README-CURRENT-STATE.md  README.md  REALTIME-OAM-EXAMPLE.yaml  REALTIME_SYSTEM.md  SINGLE-CHANGE-NEEDED.md  SLACK-WEBHOOKS-GUIDE.md  TEST-PLAN-OAM-VCLUSTER.md  TEST-RESULTS-SUMMARY.md  VCLUSTER-MULTICLUSTER-IMPLEMENTATION.md  WORKFLOW-CHANGES-MULTICLUSTER.md  argo-events-oam-sensor-simple-final.yaml  bootstrap-multi-env.sh  cleanup-noncore-resources.sh  cluster-lifecycle.sh  coredns-deployment.yaml  debug-chat-repo.yaml  deploy-oam-argocd.sh  deploy-vcluster-complete.sh  dev-workflow.mdc  github-secrets-setup.md  gitops-dispatch-workflow.yml  gitops-workflow-dispatch.yml  graphql-platform-component.yaml  infrastructure-health-check.sh  install-aks-platform.sh  install-platform-complete.sh  install-platform-resources.sh  (+67 more)
.gemini/: settings.json
.streamlit/: config.toml
factory/adapters/intake-slack/: .coverage  Dockerfile  README.md  app.py  argocd-application.yaml  argocd-gateway.yaml  build.sh  deploy.sh  deployment.yaml  docker-compose.yml  knative-service.yaml  kustomization.yaml  main.py  oam-webhook-registration.yaml  pyproject.toml  requirements.txt  setup-secrets.sh  start-slack-server.sh  test-deployment.sh  test_parsing.py
factory/adapters/intake-slack/.github/workflows/: slack-api-server-ci.yml
factory/adapters/intake-slack/src/application/: __init__.py  oam_use_cases.py
factory/adapters/intake-slack/src/domain/: __init__.py
factory/adapters/intake-slack/src/domain/strategies/: __init__.py  base.py  orchestrator.py  pattern2_compositional.py  pattern3_infrastructural.py
factory/adapters/intake-slack/src/infrastructure/: argo_client.py  nlp_parser.py
factory/adapters/intake-slack/src/interface/: __init__.py  controllers.py  dependencies.py
factory/adapters/intake-slack/tests/: __init__.py  conftest.py  test_capability_mcp_routing.py  test_pattern_handlers.py
factory/adapters/intake-slack/tests/fixtures/argo_events/: mixed_patterns.json  pattern1_foundational.json  pattern3_infrastructure.json
factory/adapters/intake-slack/tests/functional/: test_pattern_functional.py
factory/adapters/intake-slack/tests/unit/: test_application_use_cases.py  test_infrastructure_argo_client.py  test_infrastructure_nlp_parser.py  test_oam_use_cases.py
factory/production-lines/traditional-cloud/adapters/rasa-base-image/: Dockerfile  README.md  pyproject.toml
factory/production-lines/traditional-cloud/adapters/rasa-base-image/config/: credentials.yml  endpoints.yml
factory/production-lines/traditional-cloud/adapters/rasa-base-image/scripts/: bot-hash.sh  docker-entrypoint.sh  train-if-needed.sh
health-service-chat-template/microservices/chat-template/: README.md  config.yml  pyproject.toml
health-service-chat-template/microservices/chat-template/actions/: actions.py
health-service-chat-template/microservices/chat-template/data/: nlu.yml  rules.yml
health-service-chat-template/microservices/chat-template/docker/rasa/: Dockerfile
health-service-chat-template/microservices/chat-template/docker/rasa-actions/: Dockerfile
health-service-chat-template/microservices/chat-template/oam/: chat-template-componentdef.yaml
microservices/business-analyst-anthropic/: .dockerignore  .gitignore  Dockerfile  README.md  build.sh  deploy.sh  docker-compose.yml  knative-service.yaml  pyproject.toml  requirements.txt  run.sh  test-deployment.sh  test_local.py
microservices/business-analyst-anthropic/shared-libs/agent-common/: pyproject.toml
microservices/business-analyst-anthropic/src/: __init__.py  business_analyst.py  main.py  models.py
microservices/business-analyst-anthropic/tests/: __init__.py  test_main.py
microservices/business-architect-anthropic/: Dockerfile  knative-service.yaml  pyproject.toml
microservices/business-architect-anthropic/src/: business_architect.py  main.py  models.py
microservices/orchestration-service/: Dockerfile  FINAL-PIPELINE-TEST.md  GITHUB-TOKEN-FORMAT-FIX-TEST.md  GITOPS-VARIABLE-FIX-TEST.md  NEAR-COMPLETE-SUCCESS-TEST.md  ORCHESTRATION-TRIGGER-TEST.md  PERSONAL-ACCESS-TOKEN-TEST.md  README.md  json-fix-test.md  knative-service.yaml  pyproject.toml  test-fix.md
microservices/orchestration-service/src/: main.py  models.py  orchestrator.py
microservices/shared-libs/agent-common/: README.md  pyproject.toml
microservices/shared-libs/agent-common/src/agent_common/: models.py  realtime_fastapi.py  secret_loader.py
microservices/shared-libs/agent-common/tests/: test_realtime_config.py
microservices/shared-libs/realtime-transport/: .gitignore  README.md  pyproject.toml
microservices/shared-libs/realtime-transport/src/realtime_transport/: __init__.py  config.py  models.py  realtime_agent.py  realtime_fastapi.py  secret_loader.py  webhook_sink.py
microservices/shared-libs/realtime-transport/tests/: README.md  test_realtime_transport.py  test_webhook_role.py
microservices/streamlit-frontend/: CROSS-REPO-AUTH-CONFLICT-FIX-TEST.md  DOCKER-BUILD-VERIFICATION-TEST.md  Dockerfile  FINAL-E2E-TEST.md  GITOPS-ACCESS-FIX-TEST.md  GITOPS-PAT-AUTHENTICATION-TEST.md  GITOPS-SED-PATTERN-FIX-TEST.md  ORCHESTRATION-BUILD-DEBUG-TEST.md  PIPELINE-DOCKER-FIX-TEST.md  README.md  SEMANTIC-VERSION-FORMAT-TEST.md  VULNERABILITY-SCAN-BUILD-CONTEXT-FIX.md  VULNERABILITY-SCAN-BYPASS-TEST.md  WORKFLOW-DEPENDENCY-FIX-TEST.md  e2e-test.md  knative-service.yaml  main.py  pyproject.toml  test-comprehensive.md
microservices/streamlit-frontend/api/: __init__.py  client.py
microservices/streamlit-frontend/components/: archimate_performance.py  archimate_visualization.py  chat.py  navigation.py  realtime_updates.py  version_display.py  views.py
microservices/streamlit-frontend/utils/: __init__.py  async_utils.py  session_manager.py  state_persistence.py
(+1682 files in other folders)
