[project]
name = "business-analyst-anthropic"
version = "0.1.0"
description = "Business Analyst Anthropic microservice"
authors = [
    {name = "shlapolosa",email = "socrates.hlapolosa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi (>=0.115.14,<0.116.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "spacy (>=3.4.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.0.0"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.16.1"

