[tool.poetry]
name = "streamlit-frontend"
version = "1.0.0"
description = "Streamlit frontend for Visual Architecture Tool"
authors = ["Health Service IDP Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.28.0"
httpx = "^0.28.1"
websockets = "^11.0"
asyncio-mqtt = "^0.11.0"
pydantic = "^2.11.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.9.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"