[project]
name = "slack-api-server"
version = "0.1.0"
description = "Slack API Server for VCluster provisioning"
authors = [
    {name = "shlapolosa", email = "socrates.hlapolosa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi>=0.104.1,<0.105.0",
    "pydantic>=2.11.7,<3.0.0",
    "uvicorn[standard]>=0.24.0,<0.25.0",
    "python-multipart>=0.0.6,<0.1.0",
    "requests>=2.31.0,<3.0.0",
    "spacy>=3.7.2,<4.0.0",
    "structlog>=23.2.0,<24.0.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.2"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.16.1"