[project]
name = "realtime-transport"
version = "0.1.2"
description = "Role-aware realtime transport (ingest / processor / gateway / webhook) extracted from agent_common, without AI-agent identity baggage"
authors = [
    {name = "shlapolosa",email = "socrates.hlapolosa@gmail.com"}
]

requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.115.14,<0.116.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "aiokafka (>=0.8.0,<0.9.0)",
    "kafka-python (==2.0.2)",
    "websockets (>=11.0,<12.0)",
    "httpx (>=0.25.0,<0.28.0)"
]

[project.optional-dependencies]
# Optional backing-service clients — imported lazily inside realtime_agent so a
# service only needs the ones its role uses.
redis = ["aioredis (>=2.0.0,<3.0.0)"]
mqtt = ["asyncio-mqtt (>=0.16.0,<0.17.0)"]
http = ["httpx (>=0.25.0,<0.26.0)"]
testing = ["pytest", "pytest-asyncio", "pytest-mock", "httpx"]

[tool.poetry]
packages = [{include = "realtime_transport", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
