[project]
name = "agent-common"
version = "0.1.0"
description = "Shared agent base classes and utilities"
authors = [
    {name = "shlapolosa",email = "socrates.hlapolosa@gmail.com"}
]

requires-python = ">=3.10"
dependencies = [
    "pydantic (>=2.11.7,<3.0.0)",
    "fastapi (>=0.115.14,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
